fix search logo image not showing up

--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@
   cursor: text;
   outline: none;
   padding-left: 40px;
-  background: white url(/img/search_icon) left no-repeat;
+  background: white url(img/search_icon) left no-repeat;
   background-size: 14px 14px;
   background-position-x: 14px;
 }
